--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.8.5",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-material-ui-carousel": "^3.4.2"
